[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 292.0
margin_top = 263.0
margin_right = 355.0
margin_bottom = 355.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 63.0
margin_bottom = 92.0

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
